# golem-agentic

./: Cargo.toml  Makefile.toml  README.md
agent-definition-extractor-prototype/: Cargo.toml
agent-definition-extractor-prototype/src/: main.rs
agentic/: Cargo.toml
agentic-macros/: Cargo.toml
agentic-macros/src/: lib.rs  type_mapping.rs
agentic/src/: agent.rs  agent_construct.rs  agent_impl_resolver.rs  agent_instance_counter.rs  agent_instance_registry.rs  agent_registry.rs  binding.rs  bindings.rs  generate_component.rs  lib.rs  type_mapping.rs
agentic/wit/: agentic.wit  main.wit
wit/: deps.toml
