[workspace]
resolver = "2"

members = [
    "agentic",
    "agentic-macros",
    "agent-definition-extractor-prototype"
]

[profile.release]
debug = false
lto = true
opt-level = 's'

[workspace.dependencies]
golem-rust = "1.6.0"
log = "0.4.27"
reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-may-2025", features = [
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
wit-bindgen = { version = "0.40.0" }
base64 = { version = "0.22.1" }
