[package]
name = "golem-agentic-macros"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
description = "Macros of agentic SDK helps write golem components with zero knowledge on webassembly"

[lib]
proc-macro = true

[dependencies]
golem-agentic = { path = "../agentic", version = "0.0.0", default-features = false }

golem-wasm-rpc = { git =  "https://github.com/golemcloud/golem.git", branch = "code_first_agent",  default-features = false, features = ["typeinfo"] }
golem-wasm-ast = {  git =  "https://github.com/golemcloud/golem.git", branch = "code_first_agent", default-features = false, features = ["analysis",  "json"] }

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1.0.94"
lazy_static = "1.5.0"
ctor = "0.4.2"
once_cell = "1.21.3"
serde_json = "1.0.140"
dirs = "6.0.0"
