[package]
name = "golem-agentic"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
description = "Core of agentic SDK helps write golem components with zero knowledge on webassembly"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
golem-wasm-rpc = { git =  "https://github.com/golemcloud/golem.git", branch = "code_first_agent",  default-features = false, features = [
    "stub", "typeinfo"
] }
golem-wasm-ast = {   git =  "https://github.com/golemcloud/golem.git", branch = "code_first_agent", default-features = false, features = ["analysis", "json"] }

log = { workspace = true }
mime = "0.3.17"
nom = { version = "7.1", default-features = false }
reqwest = { workspace = true }
thiserror = "2.0.12"
wasi-logger = "0.1.2"
wit-bindgen = { version = "0.40.0" }
once_cell = "1.21.3"
ctor = "0.4.2"
serde_json = "1.0.140"
